--- a/templates/quithere.html
+++ b/templates/quithere.html
@@ -5,7 +5,7 @@
     <title>Erroneous Input</title>
 </head>
 <body>
-        <h1>{{error}}</h1>
+        <h1>{{error}}</h1>  <!--prints out error message received from webapp.py-->
 
 </body>
 </html>
